# mutual-fund-case-study

./: .env.example  .gitignore  GITHUB_SECRETS_SETUP.md  QUICK_START.md  README.md  SCHEDULER_DOCUMENTATION.md  SECRETS_CHECKLIST.md  STREAMLIT_DEPLOYMENT_GUIDE.md  STREAMLIT_DEPLOYMENT_PLAN.md  chatgpt_style_frontend.html  check_secrets.py  deploy_streamlit.py  enhanced_api.py  enhanced_api_fixed.py  enhanced_frontend.html  frontend.html  groq_api.py  groq_api_fixed.py  groq_frontend.html  improved_api.py  improved_frontend.html  pyproject.toml  requirements-api.txt  requirements-frontend.txt  requirements.txt  run_api.py  run_frontend.py  simple_api.py  simple_frontend.py  streamlit_app.py  streamlit_app_broken.py  streamlit_requirements.txt  streamlit_secrets.py  test_scheduler.py  test_secrets.py  update_report_20260509_170044.md  verify_deployment.py
.github/workflows/: data-update-pipeline.yml  scheduler.yml  scheduler_broken.yml  scheduler_fixed.yml  scheduler_simple.yml  test_secrets.yml
.streamlit/: config.toml  secrets.toml
docs/: README.md
docs/architecture/: architecture.md  github-actions-integration.md  phase-wise-architecture.md  phase2-systematic-breakdown.md
docs/edge-cases/: phase1-foundation.md  phase2-rag-system.md  phase3-query-processing.md  phase4-ui-development.md  phase5-integration-testing.md  phase6-deployment.md
docs/technical/: phase1-implementation.md  phase2-1-implementation.md  phase2-2-implementation.md  phase2-3-implementation.md  phase2-4-implementation.md  phase2-5-implementation.md  phase2-6-implementation.md  phase3-implementation.md  phase4-implementation.md
frontend/: app.py
scripts/: check_data_changes.py  generate_update_report.py  generate_update_report_broken.py  health_check.py  health_check_broken.py  run_performance_tests.py  validate_data.py
src/api/: __init__.py  app.py  config.py  middleware.py  routes.py
src/config/: settings.py
src/data_collection/: data_processor.py  document_loader.py  main.py  source_validator.py
tests/: test_chunking.py  test_document_loader.py  test_llm.py  test_metadata.py  test_optimization.py  test_query_processing.py  test_retrieval.py  test_source_validator.py  test_vector_store.py
(+44 files in other folders)
